# pySIP

./: .buildinfo  .envrc  .gitignore  .pdm-python  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: build-doc.yml  ci.yml  main.yml
_modules/: index.html
_sources/core/: parameter.rst.txt
_sources/regressors/: frequentist.rst.txt
_sources/state_estimator/: kalman_qr.rst.txt
bopt/core/: __init__.py  parameter.py  parameters.py  prior.py
bopt/regressors/: bayesian_filter.py  mcmc.py  meta.py  regressor.py
bopt/statespace/: __init__.py  base.py  meta.py  nodes.py
bopt/utils/: __init__.py  check.py  draw.py  matrices.py  save.py  statistics.py
data/: .gitignore
data/armadillo/: armadillo_data_H2.csv
data/mauna_loa/: monthly_in_situ_co2_mlo.csv
doc/: Makefile  api.rst  code_of_conduct.md  conf.py  index.rst  requirements.txt
doc/content/: advanced.rst  contribute.rst  quickstart.rst
doc/core/: parameters.rst  prior.rst
doc/examples/: covariances.rst
doc/guides/: model_selection.rst  quickstart.rst  save.rst
doc/models/: rc.rst
doc/reference/: core.rst
doc/regressors/: regressor.rst
doc/statespace/: gp.rst  lfm.rst  rc.rst
docs/: api.rst  conf.py  cookbook.rst  index.rst  model_list.rst
docs/content/: advanced.rst  contribute.rst  quickstart.rst
examples/: RC_Armadillo_BFGS.py  gaussian_process.html  main_Matern.py  main_armadillo_box_ines.py  main_gaussian_process.py  mcmc_plot_armadillo.py  order_hold_augmentation.py  periodic_covariance.py  quasi_periodic_covariance.py  thermal_network.html
examples/gaussian_process/: Mauna_Loa_CO2.py  regression_matern.py  regression_periodic.py
examples/twin_houses/: th_TwTiTb_RoRiRbAwAicv.py  th_TwTiTb_RoRiRibRbbAwAicv.py  th_TwTiTb_RwRbAwAicv.py  th_TwTiTm_RoRiRmAwAi.py  th_TwTiTm_RoRiRmAwAicv.py  th_TwTiTm_RoRiRmRbAwAi.py  th_TwTiTm_RoRiRmRbAwAicv.py  th_TwTi_RoRiAwAi.py  th_TwTi_RoRiAwAicv.py  th_TwTi_RoRiRbAwAi.py  th_TwTi_RoRiRbAwAicv.py  th_TwTi_RoRiRivRbAwAicv.py  th_TwTi_RoRiRsiAwAich.py  th_TwTi_RwAwAi.py  th_TwTi_RwAwAicv.py  th_TwTi_RwRbAwAi.py  th_TwTi_RwRbAwAicv.py
guides/: quickstart.html
pysip/: __init__.py  regressors.py  statespace_estimator.py
pysip/core/: __init__.py  parameter.py  parameters.py  prior.py
pysip/filters/: __init__.py  base.py  base_kfilter.py  kalman_qr.py
pysip/mcmc/: __init__.py  adaptation.py  hamiltonian.py  hmc.py  metrics.py
pysip/params/: __init__.py  parameter.py  parameters.py  prior.py  transforms.py
pysip/regressors/: __init__.py  base.py  bayesian.py  frequentist.py
pysip/state_estimator/: __init__.py  base.py  fast_kalman_qr (conflicted copy 2023-03-14 194321).py  fast_kalman_qr.py  kalman_qr.py
pysip/statespace/: __init__.py  base.py  base_statespace.py  discretization.py  latent_force_model.py  meta.py  nodes.py  resonator.py
pysip/statespace_estimator/: __init__.py  base.py  kalman_qr.py
pysip/utils/: __init__.py  artificial_data.py  check.py  draw.py  math.py  misc.py  miscellaneous.py  plot.py  save.py  statistics.py
regressors/: bayesian.html
state_estimator/: kalman_qr.html
statespace/: lfm.html  rc.html
tests/: Dockerfile  requirements.txt
tests/core/: __init__.py  test_parameter.py  test_parameters.py  test_prior.py  test_settings.py
tests/data/: conftest.py  test_armadillo.py  test_gaussian_process.py  test_gradient_gp.py  test_gradient_rc.py  test_hmc.py  test_matern_hmc.py  test_meta.py
tests/mcmc/: test_adaptation.py  test_armadillo_hmc.py  test_covariance.py  test_hmc.py  test_matern_hmc.py
tests/params/: test_parameter.py  test_parameters.py  test_prior.py
tests/statespace/: test_LFM.py  test_LTI_diffusion_disc.py  test_TwTi_RoRi.py  test_base.py  test_disc_LTI_state_input.py  test_linalg_discretization.py  test_models.py  test_product.py  test_sum.py
tests/synthetic/: conftest.py  (+1 more)
(+162 files in other folders)
