[project]
authors = []
requires-python = "<3.11,>=3.10"
dependencies = [
    "scipy>=1.9.3",
    "pandas>=1.5.1",
    "matplotlib>=3.6.2",
    "joblib>=1.2.0",
    "pylfsr>=1.0.6",
    "networkx>=2.8.8",
    "tqdm>=4.64.1",
    "numdifftools>=0.9.41",
    "arviz>=0.14.0",
    "platformdirs>=3.1.1",
    "pydantic<2",
    "jinja2>=3.1.3",
    "flatten-dict>=0.4.2",
    "pymc>=5.5.0",
    "loguru>=0.7.0",
    "makefun>=1.15.1",
    "numba>=0.59.1",
    "numpy<1.26",
    "pytensor>=2.16.1",
]
name = "pysip"
version = "1.0.1"
description = "PySIP"
readme = "README.md"

[tool.pdm]
[tool.pdm.dev-dependencies]
docs = [
    "sphinx-rtd-theme>=1.1.1",
    "sphinxcontrib-tikz>=0.4.16",
    "sphinx-autodoc-typehints>=1.19.5",
    "pydot>=1.4.2",
    "numpydoc>=1.5.0",
    "myst-parser>=2.0.0",
    "sphinx>=6",
    "nbsphinx>=0.9.2",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-book-theme>=1.0.1",
    "nbsphinx-link>=1.3.0",
]
tests = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "xdoctest>=1.1.0",
]
dev = [
    "pre-commit>=2.20.0",
    "ruff>=0.0.241",
]
interactive = [
    "ipykernel>=6.17.1",
]

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
addopts = "--cov=pysip --xdoctest --doctest-glob='docs/*.rst'"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
testpaths = ["tests", "."]

[tool.isort]
profile = "black"

